@@ -1,5 +1,11 @@
 2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Use ‘tmpfile’.
+
+	* rcs.c (sendmail, buildeltatext): Use ‘tmpfile’.
+
+2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	rcs: Fix syntax error when ‘--with-mailer=MAILER’.
 
 	Regression introduced 2010-03-30, "Abstract writes to stderr".
